fix(Table): can't resize column when reset visible columns (#1491)
* feat: 增加 table-shim 样式

* refactor: 移除 fixedHeader 变量

* refactor: 优化 resize-column 逻辑

* refactor: 更新 import 库

* refactor: 更新 resize-column 逻辑

* refactor: 精简固定表头与列拖动逻辑

* doc: 更新菜单中文文本

* doc: 微调样式

* doc: 移除不必要的节点

* doc: 格式化示例

* doc: 格式化 code 代码

* doc: 格式化示例文档

* refactor: 更新脚本模块导出

* feat: 增加重置可见列后仍可拖动逻辑

* chore: 更新拖动列样式

* feat: 增加 resetColumn Invoke 方法

* fix: 修复重置可见列不对齐问题

* test: 补充单元测试

--- a/src/BootstrapBlazor.Shared/Components/DemoBlock.razor.css
+++ b/src/BootstrapBlazor.Shared/Components/DemoBlock.razor.css
@@ -41,6 +41,10 @@
         border: none;
     }
 
+    .card-footer-code ::deep .pre-code {
+        margin: .5rem;
+    }
+
 .card-footer-control {
     text-align: center;
     color: #d3dce6;
