--- a/src/BootstrapBlazor/Components/Table/Table.css
+++ b/src/BootstrapBlazor/Components/Table/Table.css
@@ -566,15 +566,15 @@ tr.active:not(.is-edit):hover {
     position: relative;
 }
 
-    .table-resize thead th .col-resizer {
-        width: .25rem;
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        cursor: col-resize;
-    }
+.col-resizer:not(.last) {
+    width: .25rem;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    cursor: col-resize;
+}
 
 .table-resize .border-resize {
     border-right: 1px solid #409eff;
